summaries for each file type and and each team
