# app/serializers/submission_summary_serializer.rb
@@ -1,0 +1,3 @@
+class SubmissionSummarySerializer < ActiveModel::Serializer
+  attributes :id, :team_name, :filename, :file_type, :project, :summary, :status, :created_at
+end
